src/jabcode/include/jabcode_fixed.h

typedef unsigned char jab_byte;
typedef char jab_char;
typedef unsigned char jab_boolean;
typedef int jab_int32;
typedef double              jab_double;
/**
 * @brief 2-dimensional integer vector
*/
typedef struct {
jab_int32x;
jab_int32y;
}jab_vector2d;
/**
 * @brief 2-dimensional float vector
*/
typedef struct {
jab_floatx;
jab_floaty;
}jab_point;
/**
 * @brief Data structure
*/
typedef struct {
jab_int32length;
jab_chardata[];
}jab_data;
/**
 * @brief Code bitmap
*/
typedef struct {
   jab_int32width;
   jab_int32height;
   jab_int32bits_per_pixel;
   jab_int32bits_per_channel;
   jab_int32channel_count;
   jab_bytepixel[];
}jab_bitmap;
/**
 * @brief Symbol parameters
*/
typedef struct {
jab_int32index;
jab_vector2dside_size;
jab_int32host;
jab_int32slaves[4];
jab_int32 wcwr[2];
jab_data*data;
jab_byte*data_map;
jab_data*metadata;
jab_byte*matrix;
}jab_symbol;
/**
 * @brief Encode parameters
*/
typedef struct {
jab_int32color_number;
jab_int32symbol_number;
jab_int32module_size;
jab_int32master_symbol_width;
jab_int32master_symbol_height;
jab_byte*palette;g used module colors in format RGB
jab_vector2d*symbol_versions;
jab_byte* symbol_ecc_levels;
jab_int32*symbol_positions;
jab_symbol*symbols;ter to internal representation of JAB Code symbols
jab_bitmap*bitmap;
}jab_encode;
/**
 * @brief Decoded metadata
*/
typedef struct {
jab_boolean default_mode;
jab_byte Nc;
jab_byte mask_type;
jab_byte docked_position;
jab_vector2d side_version;
jab_vector2d ecl;
}jab_metadata;
/**
 * @brief Decoded symbol
*/
typedef struct {
jab_int32 index;
jab_int32 host_index;
jab_int32 host_position;
jab_vector2d side_size;
jab_float module_size;
jab_point pattern_positions[4];
jab_metadata metadata;
jab_metadata slave_metadata[4];
jab_byte* palette;
jab_data* data;
}jab_decoded_symbol;
extern jab_encode* createEncode(jab_int32 color_number, jab_int32 symbol_number);
extern void destroyEncode(jab_encode* enc);
extern jab_int32 generateJABCode(jab_encode* enc, jab_data* data);
extern jab_data* decodeJABCode(jab_bitmap* bitmap, jab_int32 mode, jab_int32* status);
extern jab_data* decodeJABCodeEx(jab_bitmap* bitmap, jab_int32 mode, jab_int32* status, jab_decoded_symbol* symbols, jab_int32 max_symbol_number);
extern jab_boolean saveImage(jab_bitmap* bitmap, jab_char* filename);
extern jab_boolean saveImageCMYK(jab_bitmap* bitmap, jab_boolean isCMYK, jab_char* filename);
extern jab_bitmap* readImage(jab_char* filename);
extern void reportError(jab_char* message);