javacpp-wrapper/src/main/java/com/jabcode/internal/JABCodeNative.java


	public native @Cast("jab_boolean") byte default_mode(); public native jab_metadata default_mode(byte setter);
	public native @Cast("jab_byte") byte Nc(); public native jab_metadata Nc(byte setter);
	public native @Cast("jab_byte") byte mask_type(); public native jab_metadata mask_type(byte setter);
	public native @Cast("jab_byte") byte docked_position(); public native jab_metadata docked_position(byte setter);
	public native @ByRef jab_vector2d side_version(); public native jab_metadata side_version(jab_vector2d setter);
	public native @ByRef jab_vector2d ecl(); public native jab_metadata ecl(jab_vector2d setter);
}

/**
 * \brief Decoded symbol
*/
public static class jab_decoded_symbol extends Pointer {
    static { Loader.load(); }
    /** Default native constructor. */
    public jab_decoded_symbol() { super((Pointer)null); allocate(); }
    /** Native array allocator. Access with {@link Pointer#position(long)}. */
    public jab_decoded_symbol(long size) { super((Pointer)null); allocateArray(size); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public jab_decoded_symbol(Pointer p) { super(p); }
    private native void allocate();
    private native void allocateArray(long size);
    @Override public jab_decoded_symbol position(long position) {
        return (jab_decoded_symbol)super.position(position);
    }
    @Override public jab_decoded_symbol getPointer(long i) {
        return new jab_decoded_symbol((Pointer)this).offsetAddress(i);
    }

	public native @Cast("jab_int32") int index(); public native jab_decoded_symbol index(int setter);
	public native @Cast("jab_int32") int host_index(); public native jab_decoded_symbol host_index(int setter);
	public native @Cast("jab_int32") int host_position(); public native jab_decoded_symbol host_position(int setter);
	public native @ByRef jab_vector2d side_size(); public native jab_decoded_symbol side_size(jab_vector2d setter);
	public native @Cast("jab_float") float module_size(); public native jab_decoded_symbol module_size(float setter);
	public native @ByRef jab_point pattern_positions(int i); public native jab_decoded_symbol pattern_positions(int i, jab_point setter);
	@MemberGetter public native jab_point pattern_positions();
	public native @ByRef jab_metadata metadata(); public native jab_decoded_symbol metadata(jab_metadata setter);
	public native @ByRef jab_metadata slave_metadata(int i); public native jab_decoded_symbol slave_metadata(int i, jab_metadata setter);
	@MemberGetter public native jab_metadata slave_metadata();
	public native @Cast("jab_byte*") BytePointer palette(); public native jab_decoded_symbol palette(BytePointer setter);
	public native jab_data data(); public native jab_decoded_symbol data(jab_data setter);
}


public static native jab_encode createEncode(@Cast("jab_int32") int color_number, @Cast("jab_int32") int symbol_number);
public static native void destroyEncode(jab_encode enc);
public static native @Cast("jab_int32") int generateJABCode(jab_encode enc, jab_data data);
public static native jab_data decodeJABCode(jab_bitmap bitmap, @Cast("jab_int32") int mode, @Cast("jab_int32*") IntPointer status);
public static native jab_data decodeJABCode(jab_bitmap bitmap, @Cast("jab_int32") int mode, @Cast("jab_int32*") IntBuffer status);
public static native jab_data decodeJABCode(jab_bitmap bitmap, @Cast("jab_int32") int mode, @Cast("jab_int32*") int[] status);
public static native jab_data decodeJABCodeEx(jab_bitmap bitmap, @Cast("jab_int32") int mode, @Cast("jab_int32*") IntPointer status, jab_decoded_symbol symbols, @Cast("jab_int32") int max_symbol_number);
public static native jab_data decodeJABCodeEx(jab_bitmap bitmap, @Cast("jab_int32") int mode, @Cast("jab_int32*") IntBuffer status, jab_decoded_symbol symbols, @Cast("jab_int32") int max_symbol_number);
public static native jab_data decodeJABCodeEx(jab_bitmap bitmap, @Cast("jab_int32") int mode, @Cast("jab_int32*") int[] status, jab_decoded_symbol symbols, @Cast("jab_int32") int max_symbol_number);
public static native @Cast("jab_boolean") byte saveImage(jab_bitmap bitmap, @Cast("jab_char*") BytePointer filename);
public static native @Cast("jab_boolean") byte saveImage(jab_bitmap bitmap, @Cast("jab_char*") ByteBuffer filename);
public static native @Cast("jab_boolean") byte saveImage(jab_bitmap bitmap, @Cast("jab_char*") byte[] filename);
public static native @Cast("jab_boolean") byte saveImageCMYK(jab_bitmap bitmap, @Cast("jab_boolean") byte isCMYK, @Cast("jab_char*") BytePointer filename);
public static native @Cast("jab_boolean") byte saveImageCMYK(jab_bitmap bitmap, @Cast("jab_boolean") byte isCMYK, @Cast("jab_char*") ByteBuffer filename);
public static native @Cast("jab_boolean") byte saveImageCMYK(jab_bitmap bitmap, @Cast("jab_boolean") byte isCMYK, @Cast("jab_char*") byte[] filename);
public static native jab_bitmap readImage(@Cast("jab_char*") BytePointer filename);
public static native jab_bitmap readImage(@Cast("jab_char*") ByteBuffer filename);
public static native jab_bitmap readImage(@Cast("jab_char*") byte[] filename);
public static native void reportError(@Cast("jab_char*") BytePointer message);
public static native void reportError(@Cast("jab_char*") ByteBuffer message);
public static native void reportError(@Cast("jab_char*") byte[] message);

// #ifdef __cplusplus
// #endif

// #endif


// Parsed from jabcode_c_wrapper.h

/**
 * JABCode C Wrapper Header
 * This file provides C wrapper functions for the JABCode C++ library
 */

// #ifndef JABCODE_C_WRAPPER_H
// #define JABCODE_C_WRAPPER_H

// #ifdef __cplusplus
// #endif

// Ensure jabcode.h also has C linkage when included in C++ compilation units
// #include "jabcode.h"

// C wrapper functions for JABCode library
public static native @Cast("jab_boolean") byte saveImageCMYK_c(jab_bitmap bitmap, @Cast("jab_boolean") byte isCMYK, @Cast("jab_char*") BytePointer filename);
public static native @Cast("jab_boolean") byte saveImageCMYK_c(jab_bitmap bitmap, @Cast("jab_boolean") byte isCMYK, @Cast("jab_char*") ByteBuffer filename);
public static native @Cast("jab_boolean") byte saveImageCMYK_c(jab_bitmap bitmap, @Cast("jab_boolean") byte isCMYK, @Cast("jab_char*") byte[] filename);
public static native void reportError_c(@Cast("jab_char*") BytePointer message);
public static native void reportError_c(@Cast("jab_char*") ByteBuffer message);
public static native void reportError_c(@Cast("jab_char*") byte[] message);
// Experimental: adjust Nc detection thresholds (for tests)
public static native void setNcThresholds_c(@Cast("jab_int32") int ths_black, @Cast("jab_double") double ths_std);
// Experimental: force Nc value in decoder (for tests)
public static native void setForceNc_c(@Cast("jab_int32") int nc);
// Experimental: fetch last Nc RGB samples (4x RGB), 4 module values, and final Nc
public static native void getLastNcDebug_c(@Cast("jab_int32*") IntPointer out, @Cast("jab_int32") int len);
public static native void getLastNcDebug_c(@Cast("jab_int32*") IntBuffer out, @Cast("jab_int32") int len);
public static native void getLastNcDebug_c(@Cast("jab_int32*") int[] out, @Cast("jab_int32") int len);
// Experimental: use default palette grid for >=16 colors during decode (for tests)
public static native void setUseDefaultPaletteHighColor_c(@Cast("jab_int32") int flag);
// Experimental: force ECL (wc, wr) during decode (for tests)
public static native void setForceEcl_c(@Cast("jab_int32") int wc, @Cast("jab_int32") int wr);
// Experimental: classifier debug controls and stats (for tests)
    public static native void setClassifierDebug_c(@Cast("jab_int32") int enable);
    public static native void setClassifierMode_c(@Cast("jab_int32") int mode);
    public static native void getClassifierStats_c(@Cast("jab_int32*") IntPointer out, @Cast("jab_int32") int len);
    public static native void getClassifierStats_c(@Cast("jab_int32*") IntBuffer out, @Cast("jab_int32") int len);
    public static native void getClassifierStats_c(@Cast("jab_int32*") int[] out, @Cast("jab_int32") int len);

    // Experimental: pipeline debug (for tests)
    public static native void getDecodePipelineDebug_c(@Cast("jab_int32*") IntPointer out, @Cast("jab_int32") int len);
    public static native void getDecodePipelineDebug_c(@Cast("jab_int32*") IntBuffer out, @Cast("jab_int32") int len);
    public static native void getDecodePipelineDebug_c(@Cast("jab_int32*") int[] out, @Cast("jab_int32") int len);
    public static native void getRawModuleSample_c(@Cast("jab_int32*") IntPointer out, @Cast("jab_int32") int len);
    public static native void getRawModuleSample_c(@Cast("jab_int32*") IntBuffer out, @Cast("jab_int32") int len);
    public static native void getRawModuleSample_c(@Cast("jab_int32*") int[] out, @Cast("jab_int32") int len);
    // Experimental: Part II debug (for tests)
    public static native void getPart2Debug_c(@Cast("jab_int32*") IntPointer out, @Cast("jab_int32") int len);
    public static native void getPart2Debug_c(@Cast("jab_int32*") IntBuffer out, @Cast("jab_int32") int len);
    public static native void getPart2Debug_c(@Cast("jab_int32*") int[] out, @Cast("jab_int32") int len);
    // Experimental: force mask type during demask (for tests). Use -1 to disable.
    public static native void setForceMask_c(@Cast("jab_int32") int mask);
    // Experimental: decoder palette dump (first palette block, bytes as ints)
    public static native void getDecoderPaletteDebug_c(@Cast("jab_int32*") IntPointer out, @Cast("jab_int32") int len);
    public static native void getDecoderPaletteDebug_c(@Cast("jab_int32*") IntBuffer out, @Cast("jab_int32") int len);
    public static native void getDecoderPaletteDebug_c(@Cast("jab_int32*") int[] out, @Cast("jab_int32") int len);
    // Experimental: encoder default palette dump for given color_number (bytes as ints)
    public static native void getEncoderDefaultPalette_c(@Cast("jab_int32") int color_number, @Cast("jab_int32*") IntPointer out, @Cast("jab_int32") int len);
    public static native void getEncoderDefaultPalette_c(@Cast("jab_int32") int color_number, @Cast("jab_int32*") IntBuffer out, @Cast("jab_int32") int len);
    public static native void getEncoderDefaultPalette_c(@Cast("jab_int32") int color_number, @Cast("jab_int32*") int[] out, @Cast("jab_int32") int len);

    // Experimental: LDPC input bits before(0)/after(1) deinterleave (bits as ints)
    public static native void getLdpcInputDebug_c(@Cast("jab_int32*") IntPointer out, @Cast("jab_int32") int len, @Cast("jab_int32") int which);
    public static native void getLdpcInputDebug_c(@Cast("jab_int32*") IntBuffer out, @Cast("jab_int32") int len, @Cast("jab_int32") int which);
    public static native void getLdpcInputDebug_c(@Cast("jab_int32*") int[] out, @Cast("jab_int32") int len, @Cast("jab_int32") int which);

// #ifdef __cplusplus
// #endif

// #endif // JABCODE_C_WRAPPER_H


}
